--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,14 @@
 img{
     height: 55px;
 }
+
+.dropdown-menu .dropdown-item:hover {
+    background-color: #ea3f2c; /* Cambia el color de fondo al que desees */
+  }
+
+  .cltitle{
+    
+  
+   font-size: 50px;
+   font-weight: bold;
+  }
