--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,17 +14,17 @@
             <ul class="navbar-nav">
               
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link cltitle" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         {{usuario}} <i class="material-icons">person</i>
                       
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item"  routerLink="/configuracionyprivacidad" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">help</i> Ayuda</a>
-                        <a class="dropdown-item" href="javascript:void(0)"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
+                        <a class="dropdown-item" routerLink="/ayuda"><i class="material-icons">help</i> Ayuda</a>
+                        <a class="dropdown-item" (click)="logout()"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
                         
                     </div>
                 </li>
