--- a/src/app/configuracion-privacidad/configuracion-privacidad.component.html
+++ b/src/app/configuracion-privacidad/configuracion-privacidad.component.html
@@ -2,37 +2,44 @@
     <div class="container-fluid">
       <div class="card">
           <div class="card-header card-header-danger">
-              <h2 class="card-title"><img src="assets/img/configuraciones.png" alt="">Configuración y Privacidad</h2>
+              <h2 class="card-title"><img src="assets/img/configuraciones.png" alt="">  Configuración y Privacidad</h2>
           </div>
           <div class="card-body">
               <div id="typography">
                   <div class="card-title">
                       <h2>Tu Información</h2>
                   </div>
-                  <div class="row">
-                      <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaUsuario">
+                  <div class="row" *ngIf="usuariosss" >
+                      <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaUsuario"  (click)="editarusuario(usuariosss)">
+                        <h3>
+                          <span class="tim-note">Usuario</span>{{usuariosss.usuario}} </h3> 
+                      
+                      </div>
+                      <div class="tim-typo table-row editable-row "  data-toggle="modal" data-target="#ventanaNombre" (click)=" editarnombre(usuariosss)">
                           <h3>
-                              <span class="tim-note">Usuario</span >GilbertoB </h3> 
+                              <span class="tim-note">Nombres</span>{{usuariosss.persona.nombre}}</h3>
                       </div>
-                      <div class="tim-typo table-row editable-row "  data-toggle="modal" data-target="#ventanaNombre">
+                      <div class="tim-typo table-row editable-row"  data-toggle="modal" data-target="#ventanaEmail"   (click)=" editaremail(usuariosss)">
                           <h3>
-                              <span class="tim-note">Nombres</span>Gilberto Blanco</h3>
+                              <span class="tim-note ">Email</span>{{usuariosss.persona.email}}</h3>
                       </div>
-                      <div class="tim-typo table-row editable-row"  data-toggle="modal" data-target="#ventanaEmail">
+                      <div class="tim-typo table-row editable-row"  data-toggle="modal" data-target="#ventanaTelefono" (click)=" editartelefono(usuariosss)">
                           <h3>
-                              <span class="tim-note ">Email</span>gilbertoblanco@espam.edu.ec</h3>
+                              <span class="tim-note">Telèfono</span>{{usuariosss.persona.telefono}}</h3>
                       </div>
-                      <div class="tim-typo table-row editable-row"  data-toggle="modal" data-target="#ventanaTelefono">
-                          <h4>
-                              <span class="tim-note">Telèfono</span>0992515160</h4>
-                      </div>
-                      <div class="tim-typo table-row editable-row"  data-toggle="modal" data-target="#ventanaContrasena">
-                        <h4>
-                            <span class="tim-note">Contraseña</span>*******************</h4>
+                      <div class="tim-typo table-row editable-row"  data-toggle="modal" data-target="#ventanaContrasena" (click)="editarcontrasena(usuariosss)">
+                        <h3>
+                            <span class="tim-note">Contraseña</span> ****************
+                            
+                        </h3>
                     </div>
-                    <div class="tim-typo table-row editable-row " data-toggle="modal" data-target="#ventanaFoto">
+                    
+                    
+                    
+                    
+                    <div class="tim-typo table-row editable-row " data-toggle="modal" data-target="#ventanaFoto"    (click)=" editarfoto(usuariosss)">
                         <h4>
-                            <span class="tim-note">Foto</span>foto.png</h4>
+                            <span class="tim-note">Foto</span>{{usuariosss.persona.foto}}</h4>
                     </div>
                       
                      
@@ -50,48 +57,57 @@
 
   
   <!-- Modal Usuario-->
-  <div class="modal fade" id="ventanaUsuario"data-backdrop="static"   tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+  <div class="modal fade" id="ventanaUsuario" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header danger" >
-          <h1 class="modal-title" id="exampleModalLabel"><img src="assets/img/usuario.png" alt="">Editar Usuario</h1>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+      <div class="modal-content d-flex align-items-center " >
+        <div class=" heads x">
+          <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Usuario <img src="assets/img/usuario.png" alt=""></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div class="col-md-8">
-                <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Usuario: " type="text"  formControlName="usuario">GilbertoB
-                </mat-form-field>
-
-              </div>
+          <form [formGroup]="usuarioForm">
+  <div class="form-row">
+    <div class="form-group col-md-8">
+      <label for="inputState" class="select-gr">Usuario</label> <br>
+      <input class="example-full-width estilos" type="text" formControlName="usuario">
+    </div>
+  </div>       
+            <input type="hidden" formControlName="funcion">
+          </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-danger">Guardar</button>
+          <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+          <button type="button" class="btn btn-danger" (click)=" editarUsuario()" data-dismiss="modal">Guardar</button>
         </div>
       </div>
     </div>
   </div>
 
-
     <!-- Modal Nombre -->
     <div class="modal fade" id="ventanaNombre"data-backdrop="static"   tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header danger">
-              <h1 class="modal-title " id="exampleModalLabel"><img src="assets/img/editar-informacion (1).png" alt="">Editar Nombres</h1>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content d-flex align-items-center">
+          <div class=" heads x">
+              <h5 class="modal-title texto-grueso " id="exampleModalLabel">Editar Nombres <img src="assets/img/editar-informacion (1).png" alt=""></h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+             
               </button>
             </div>
             <div class="modal-body">
-              ...
+              
+              <form [formGroup]="usuarioForm">
+                <div class="form-row">
+                  <div class="form-group col-md-8">
+                    <label for="inputState" class="select-gr">Nombres</label> <br>
+                    <input class="example-full-width estilos" type="text" formControlName="nombre">
+                  </div>
+                </div> 
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-danger">Guardar</button>
+              <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-danger" (click)=" editarNombre()" data-dismiss="modal">Guardar</button>
             </div>
           </div>
         </div>
@@ -101,20 +117,25 @@
     
     <!-- Modal Email-->
     <div class="modal fade" id="ventanaEmail"data-backdrop="static"   tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header danger">
-              <h1 class="modal-title" id="exampleModalLabel"><img src="assets/img/email.png" alt="">Editar Email</h1>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content d-flex align-items-center">
+          <div class=" heads x">
+              <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Email <img src="assets/img/email.png" alt=""></h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                
               </button>
             </div>
             <div class="modal-body">
-              ...
+              <form [formGroup]="usuarioForm">
+                <div class="form-group col-md-8">
+                  <label for="inputState" class="select-gr">Email</label> <br>
+                  <input class="example-full-width estilos" type="text" formControlName="email">
+                </div>
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-danger">Guardar</button>
+              <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-danger" (click)=" editarEmail()" data-dismiss="modal">Guardar</button>
             </div>
           </div>
         </div>
@@ -123,20 +144,25 @@
     
     <!-- Modal Telefono-->
     <div class="modal fade" id="ventanaTelefono"data-backdrop="static"   tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header danger">
-              <h1 class="modal-title" id="exampleModalLabel"><img src="assets/img/llamada.png" alt="">Editar Teléfono</h1>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content d-flex align-items-center">
+          <div class=" heads x">
+              <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Teléfono <img src="assets/img/llamada.png" alt=""></h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+              
               </button>
             </div>
             <div class="modal-body">
-              ...
+              <form [formGroup]="usuarioForm">
+                <div class="form-group col-md-8">
+                  <label for="inputState" class="select-gr">Teléfono</label> <br>
+                  <input class="example-full-width estilos" type="text" formControlName="telefono">
+                </div>
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-danger">Guardar</button>
+              <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-danger" (click)=" editarTelefono()" data-dismiss="modal">Guardar</button>
             </div>
           </div>
         </div>
@@ -144,20 +170,25 @@
 
           <!-- Modal Contraseña -->
     <div class="modal fade" id="ventanaContrasena"data-backdrop="static"   tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header danger">
-              <h1 class="modal-title" id="exampleModalLabel"><img src="assets/img/contrasena.png" alt="">Editar Contraseña</h1>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content d-flex align-items-center">
+          <div class=" heads x">
+              <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Contraseña <img src="assets/img/contrasena.png" alt=""></h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+               
               </button>
             </div>
             <div class="modal-body">
-              ...
+              <form [formGroup]="usuarioForm">
+                <div class="form-group col-md-8">
+                  <label for="inputState" class="select-gr">Contraseña</label> <br>
+                  <input class="example-full-width estilos" type="text" formControlName="contrasena">
+                </div>
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-danger">Guardar</button>
+              <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-danger" (click)=" editarContrasena()" data-dismiss="modal">Guardar</button>
             </div>
           </div>
         </div>
@@ -166,20 +197,25 @@
 
           <!-- Modal Foto -->
     <div class="modal fade" id="ventanaFoto"data-backdrop="static"   tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header danger">
-              <h1 class="modal-title" id="exampleModalLabel"><img src="assets/img/imagen.png" alt="">Editar Foto</h1>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content d-flex align-items-center">
+          <div class=" heads x">
+              <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Foto <img src="assets/img/imagen.png" alt=""></h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+               
               </button>
             </div>
             <div class="modal-body">
-              ...
+              <form [formGroup]="usuarioForm">
+                <div class="form-group col-md-8">
+                  <label for="inputState" class="select-gr">Foto</label> <br>
+                  <input class="example-full-width estilos" type="text" formControlName="foto">
+                </div>
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-danger">Guardar</button>
+              <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-danger" (click)=" editarFoto()" data-dismiss="modal">Guardar</button>
             </div>
           </div>
         </div>
