--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -7,13 +7,13 @@
 
 
       <div class="row">
-        <button mat-raised-button type="submit" class="btn btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
+        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
 
           <div class="col-md-12">
 
               <div class="card">
                   <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">  <img src="/assets/img/mn.png" class="edit" alt=""> M    E    N    U</h4>
+                      <h4 class="card-title disabled">  <img src="/assets/img/mn.png" class="edit" alt=""> Menu</h4>
                      
                   </div>
                   <div class="card-body">
@@ -75,34 +75,34 @@
 <div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
-      <div class=" heads">
+      <div class=" heads x">
         <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/menuicono.png" alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="menuForm">
 
-          <!-- ... -->
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr text-center">Tipo Menu</label> <br>
+    <select id="inputState" class="example-full-width estilos" placeholder="Seleccione" formControlName="id_tipomenu" (change)="getId_Tipomenu()">
+      <option selected disabled value="">Seleccione</option>
+      <option *ngFor="let item of tipomenusss" [value]="item.id">{{item.tipo}}</option>
+    </select>
+    <div *ngIf="showIdTipomenuError" class="text-danger">Campo requerido</div>
+  </div>
+</div>
 
-          <div class="form-row">
-            <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr text-center">Tipo Menu</label> <br>
-              <select id="inputState" class="example-full-width estilos" placeholder="Seleccione" formControlName="id_tipomenu" (change)="getId_Tipomenu()">
-                <option selected disabled value="">Seleccione</option>
-                <option *ngFor="let item of tipomenusss" [value]="item.id">{{item.tipo}}</option>
-              </select>
-              <div *ngIf="showIdTipomenuError" class="text-danger">Campo requerido</div>
-            </div>
-          </div>
-          
-          <div class="form-row">
-            <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Descripción</label> <br>
-              <input class="example-full-width estilos" type="text" formControlName="descripcion">
-              <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
-            </div>
-          </div>
-          
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr">Descripción</label> <br>
+    <input class="example-full-width estilos" type="text" formControlName="descripcion">
+    <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+  </div>
+</div>
+
+<!-- ... -->
+
 
           <!-- ... -->
 
@@ -110,7 +110,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
         <button type="button" class="btn btn-danger" (click)="addMenu()">Guardar</button>
       </div>
     </div>
