--- a/src/app/pesos/pesos.component.html
+++ b/src/app/pesos/pesos.component.html
@@ -8,13 +8,12 @@
 
       <div class="row">
         <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
-        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">TIPO ALIMENTO +</button>
 
           <div class="col-md-12">
 
               <div class="card">
                   <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">  <img src="/assets/img/alimentos.png" class="edit" alt=""> Alimentos</h4>
+                      <h4 class="card-title disabled">  <img src="/assets/img/escala.png" class="edit" alt=""> Pesos</h4>
                      
                   </div>
                   <div class="card-body">
@@ -24,11 +23,9 @@
                                   <th>
                                       ID
                                   </th>
+                                 
                                   <th>
-                                      Tipo Alimento
-                                  </th>
-                                  <th>
-                                      Alimento
+                                      Descripción
                                   </th>
                                   
                                   <th>
@@ -36,20 +33,18 @@
                                 </th>
                                   
                               </thead>
-                              <tbody  *ngFor="let item of alimentosss ;let i=index "  >
+                              <tbody  *ngFor="let item of pesosss ;let i=index "  >
                                   <tr  >
                                       <td >
                                         {{i+1}}
                                       </td>
-                                      <td >
-                                        {{item.tipo_alimento.tipo}}
-                                      </td>
+                                    
                                       <td>
                                         {{item.descripcion}}
                                       </td>
                                       
                                       <td>
-                                        <button1 color="primary" (click)="editarAlimento(item)">
+                                        <button1 color="primary" (click)="editartipoAlimento(item)">
                                           <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
                                         </button1>
                                         
@@ -77,42 +72,28 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
       <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/balanza.png" alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="alimentoForm">
+        <form [formGroup]="pesosForm">
 
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr text-center">Tipo Alimento</label> <br>
-    <select id="inputState" class="example-full-width estilos" placeholder="Seleccione" formControlName="id_tipoalimento" (change)="getId_Tipoalimento()">
-      <option selected disabled value="">Seleccione</option>
-      <option *ngFor="let item of tipoalimentosss" [value]="item.id">{{item.tipo}}</option>
-    </select>
-    <div *ngIf="showIdTipoalimentoError" class="text-danger">Campo requerido</div>
-  </div>
-</div>
 
 <div class="form-row">
   <div class="form-group col-md-8">
     <label for="inputState" class="select-gr">Descripción</label> <br>
     <input class="example-full-width estilos" type="text" formControlName="descripcion">
-    <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+    <div *ngIf="showpesooError" class="text-danger">Campo requerido</div>
   </div>
 </div>
 
-<!-- ... -->
-
-
-          <!-- ... -->
 
           <input type="hidden" formControlName="funcion">
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
-        <button type="button" class="btn btn-danger" (click)="addAlimento()" data-dismiss="modal">Guardar</button>
+        <button type="button" class="btn btn-danger" (click)="addtipoAlimento()" data-dismiss="modal">Guardar</button>
       </div>
     </div>
   </div>
