--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                     <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item"  routerLink="/configuracionyprivacidad" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
                         <a class="dropdown-item" routerLink="/ayuda"><i class="material-icons">help</i> Ayuda</a>
-                        <a class="dropdown-item" (click)="logout()"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
+                        <a class="dropdown-item" (click)="showModalcerrar()"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
                         
                     </div>
                 </li>
