--- a/src/app/cantidadplatos/cantidadplatos.component.html
+++ b/src/app/cantidadplatos/cantidadplatos.component.html
@@ -8,13 +8,12 @@
 
       <div class="row">
         <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
-        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm2" (click)="nuevoCurso()">TIPO ALIMENTO +</button>
 
           <div class="col-md-12">
 
               <div class="card">
                   <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">  <img src="/assets/img/alimentos.png" class="edit" alt=""> Alimentos</h4>
+                      <h4 class="card-title disabled">  <img src="/assets/img/plato-y-cubiertos.png" class="edit" alt="">  Cantidad Platos</h4>
                      
                   </div>
                   <div class="card-body">
@@ -25,31 +24,37 @@
                                       ID
                                   </th>
                                   <th>
-                                      Tipo Alimento
+                                      Platos
                                   </th>
                                   <th>
-                                      Alimento
+                                      Cantidad
                                   </th>
+                                  <th>
+                                    Fecha
+                                </th>
                                   
                                   <th>
                                     Acción
                                 </th>
                                   
                               </thead>
-                              <tbody  *ngFor="let item of alimentosss ;let i=index "  >
+                              <tbody  *ngFor="let item of cantidadplatosss ;let i=index "  >
                                   <tr  >
                                       <td >
                                         {{i+1}}
                                       </td>
                                       <td >
-                                        {{item.tipo_alimento.tipo}}
+                                        {{item.plato.descripcion}}
                                       </td>
                                       <td>
-                                        {{item.descripcion}}
+                                        {{item.cantidad}}
+                                      </td>
+                                      <td>
+                                        {{item.fecha}}
                                       </td>
                                       
                                       <td>
-                                        <button1 color="primary" (click)="editarAlimento(item)">
+                                        <button1 color="primary" (click)="editarPlato(item)">
                                           <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
                                         </button1>
                                         
@@ -77,93 +82,56 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
       <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/menuicono.png" alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="alimentoForm">
+        <form [formGroup]="cantidadPlatosForm">
 
 <div class="form-row">
   <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr text-center">Tipo Alimento</label> <br>
-   
+    <label for="inputState" class="select-gr text-center">Platos</label> <br>
+    <div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
+      <div class="selected-option" (click)="toggleShowMoreOptions()">
+        {{ getSelectedOptionLabel() }}
+        <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+      </div>
+      <div class="options-container">
+        <ng-container *ngFor="let item of platosss">
+          <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7" (click)="selectOption(item)">{{ item.descripcion }}</div>
+          <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{ item.descripcion }}</div>
+          <div *ngIf="showId_platoError" class="text-danger">Campo requerido</div>
+        </ng-container>
+      </div>
+    </div>
 
-    
-<div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
-  <div class="selected-option" (click)="toggleShowMoreOptions()">
-    {{ getSelectedOptionLabel() }}
-    <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
-  </div>
-  <div class="options-container">
-    <ng-container *ngFor="let item of tipoalimentosss">
-      <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7" (click)="selectOption(item)">{{ item.tipo }}</div>
-      <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{ item.tipo }}</div>
-      <div *ngIf="showIdTipoalimentoError" class="text-danger">Campo requerido</div>
-    </ng-container>
-  </div>
-</div>
-
-
-
-
-  
   </div>
 </div>
 
 <div class="form-row">
   <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr">Descripción</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="descripcion">
-    <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+    <label for="inputState" class="select-gr">Cantidad</label> <br>
+    <input class="example-full-width estilos" type="text" formControlName="cantidad">
+    <div *ngIf="showCantidadError" class="text-danger">Campo requerido</div>
   </div>
 </div>
 
-<!-- ... -->
-
-
-          <!-- ... -->
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr">Fecha</label> <br>
+    <input class="example-full-width estilos" type="date" formControlName="fecha">
+    <div *ngIf="showFechaError" class="text-danger">Campo requerido</div>
+  </div>
+</div>
 
           <input type="hidden" formControlName="funcion">
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
-        <button type="button" class="btn btn-danger" (click)="addAlimento()" data-dismiss="modal">Guardar</button>
+        <button type="button" class="btn btn-danger" (click)="addCantidadPlato()" data-dismiss="modal">Guardar</button>
       </div>
     </div>
   </div>
 </div>
-
-
-<div class="modal fade" id="ventanaForm2" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content d-flex align-items-center">
-      <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="TipoalimentoForm">
-
-
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr">Tipo</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="tipo">
-    <div *ngIf="showTipoError" class="text-danger">Campo requerido</div>
-  </div>
-</div>
-
-
-          <input type="hidden" formControlName="funcion">
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
-        <button type="button" class="btn btn-danger" (click)="addtipoAlimento()" data-dismiss="modal">Guardar</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 
