--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -27,15 +27,20 @@
                                       Tipo Menú
                                   </th>
                                   <th>
-                                      Plato
+                                      Cantidad de Plato
                                   </th>
-                                  
+                                  <th>
+                                    Fecha
+                                </th>
+                                <th>
+                                  Habilitado
+                              </th>
                                   <th>
                                     Acción
                                 </th>
                                   
                               </thead>
-                              <tbody  *ngFor="let item of platosss ;let i=index "  >
+                              <tbody  *ngFor="let item of menusss ;let i=index "  >
                                   <tr  >
                                       <td >
                                         {{i+1}}
@@ -44,11 +49,17 @@
                                         {{item.tipo_menu.tipo}}
                                       </td>
                                       <td>
-                                        {{item.descripcion}}
+                                        {{item.cantidad_plato.cantidad}}
+                                      </td>
+                                      <td>
+                                        {{item.fecha}}
+                                      </td>
+                                      <td>
+                                        {{item.habilitado}}
                                       </td>
                                       
                                       <td>
-                                        <button1 color="primary" (click)="editarPlato(item)">
+                                        <button1 color="primary" (click)="editarMenu(item)">
                                           <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
                                         </button1>
                                         
@@ -85,26 +96,65 @@
 <div class="form-row">
   <div class="form-group col-md-8">
     <label for="inputState" class="select-gr text-center">Tipo Menú</label> <br>
-    <select id="inputState" class="example-full-width estilos" placeholder="Seleccione" formControlName="id_tipomenu" (change)="getId_Tipomenu()">
-      <option selected disabled value="">Seleccione</option>
-      <option *ngFor="let item of tipomenusss" [value]="item.id">{{item.tipo}}</option>
-    </select>
-    <div *ngIf="showIdTipomenuError" class="text-danger">Campo requerido</div>
+    <div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
+      <div class="selected-option" (click)="toggleShowMoreOptions()">
+        {{ getSelectedOptionLabel() }}
+        <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+      </div>
+      <div class="options-container">
+        <ng-container *ngFor="let item of tipomenusss">
+          <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7" (click)="selectOption(item)">{{ item.tipo }}</div>
+          <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{ item.tipo }}</div>
+          <div *ngIf="showId_tipomenuError" class="text-danger">Campo requerido</div>
+        </ng-container>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr text-center">Cantidad</label> <br>
+    <div class="custom-dropdown" [class.show-more-options]="showMoreOptionscantidadplato">
+      <div class="selected-option" (click)="toggleShowMoreOptionscantidadplato()">
+        {{ getSelectedOptionLabelcantidadplato() }}
+        <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+      </div>
+      <div class="options-container">
+        <ng-container *ngFor="let item of cantidadplatosss">
+          <div class="option example-full-width estilos" *ngIf="!showMoreOptionscantidadplato && index >= 7" (click)="selectOptioncantidadplato(item)">{{ item.cantidad }}</div>
+          <div class="option estil editable-row" *ngIf="showMoreOptionscantidadplato" (click)="selectOptioncantidadplato(item)">{{ item.cantidad }}</div>
+          <div *ngIf="showId_cantidadplatoError" class="text-danger">Campo requerido</div>
+        </ng-container>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+
+
+
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr">Habilitado</label> <br>
+    <input class="example-full-width estilos" type="text" formControlName="habilitado">
+    <div *ngIf="showHabilitadoError" class="text-danger">Campo requerido</div>
   </div>
 </div>
 
 <div class="form-row">
   <div class="form-group col-md-8">
     <label for="inputState" class="select-gr">Descripción</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="descripcion">
-    <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+    <input class="example-full-width estilos" type="date" formControlName="fecha">
+    <div *ngIf="showFechaError" class="text-danger">Campo requerido</div>
   </div>
 </div>
 
-<!-- ... -->
 
-
-          <!-- ... -->
 
           <input type="hidden" formControlName="funcion">
         </form>
